--- a/example.html
+++ b/example.html
@@ -122,6 +122,9 @@
             </video-player>
         </div>
 
-        <script src="js/index.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/gh/display-design-studio/video-player/js/index.min.js"
+            type="module"
+        ></script>
     </body>
 </html>
